--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -53,11 +53,11 @@ jobs:
           RUFF_VERSION: ${{ steps.get-ruff-version.outputs.ruff_version }}
         run: python -m pip install "ruff==${RUFF_VERSION}"
 
-      - name: Ruff check
-        run: ruff check --output-format=github
+      # - name: Ruff check
+      #   run: ruff check --output-format=github
 
-      - name: Ruff format
-        run: ruff format --diff
+      # - name: Ruff format
+      #   run: ruff format --diff
 
   typos:
     name: Typos
